--- a/app/views/main/welcome.html.erb
+++ b/app/views/main/welcome.html.erb
@@ -30,7 +30,7 @@
         <li>
           Followers
           <br>
-          <span class="numbers"><%=@user.followees.length%></span>
+          <span class="numbers"><%=@user.followings.length%></span>
         </li>
       <% end%>
         </div>
