--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,11 +47,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">Kitter</a>
+          <li class='brand'><%= link_to "Kitter #{image_tag('kitter.png')}".html_safe, root_path%></li>
           <div class="container-fluid nav-collapse">
             <ul class="nav">
 
-              <li><%= link_to image_tag('home.png') + "Home", root_path%></li>
+
               <li><% unless current_user %></li>
               <li><%= link_to "Login", login_path%></li>
               <li><%= link_to "Sign Up", signup_path%></li>
@@ -60,8 +60,7 @@
                   <% if current_user %>
               <li><%= link_to image_tag('notification.png', class: 'nav_icon')+"Notifications", user_notifications_path(current_user)%></li>
               <li><%= link_to image_tag('hashtag.png', class: 'nav_icon') + "Discover", hashtags_path %></li>
-              <li><%= link_to image_tag('profile.png', class: 'nav_icon')+"Me", user_path(current_user)%></li>
-              <li><%= link_to "catlogo", root_path%></li>
+              <!-- <li><#%= link_to image_tag('profile.png', class: 'nav_icon')+"Me", user_path(current_user)%></li> -->
               <li><%= link_to image_tag('settings.png', class: 'nav_icon'), edit_user_path(current_user)%></li>
               <li><%= link_to image_tag('write.png', class: 'nav_icon'), new_user_tweet_path(current_user) %></li>
               <li><%= link_to "Logout", logout_path%></li>
