--- a/app/views/layouts/user_static.html.erb
+++ b/app/views/layouts/user_static.html.erb
@@ -96,7 +96,7 @@
         <div class="user_info">
           FOLLOWING
           <br>
-          <%= @user.followees.length %>
+          <%= @user.followings.length %>
         </div>
         <% end%>
 
@@ -122,7 +122,7 @@
             <%= submit_tag "Block" %>
             <% end %>
 
-              <% if current_user.followees.include?(@user) %>
+              <% if current_user.followings.include?(@user) %>
                 <%= form_tag user_unfollow_path(@user) do  %>
                 <%= submit_tag "Unfollow" %>
                 <% end %>
