--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,6 +25,11 @@ a {
   font-family: Helvetica;
 }
 
+a:hover {
+text-decoration: none;
+opacity: .8;
+}
+
 .display-me {
   display: block !important ;
 }
