--- a/app/views/layouts/user_static.html.erb
+++ b/app/views/layouts/user_static.html.erb
@@ -58,11 +58,11 @@
     <div class="sidebar_footer sidebar row span12">
       &copy; Trinity Montoya 2014
       <br>
-      <a href="#">About</a>
+      <!-- <a href="#">About</a>
+      <br> -->
+      <a href="#">Personal Page</a>
       <br>
       <a href="#">Github</a>
-      <br>
-      <a href="#">Personal Page</a>
     </div>
 
   </div><!-- .left_sidebar -->
