--- a/app/views/main/welcome.html.erb
+++ b/app/views/main/welcome.html.erb
@@ -75,13 +75,7 @@
     </div>
 
     <div class="sidebar_footer sidebar row span12">
-      &copy; Trinity Montoya 2014
-      <br>
-      <a href="#">About</a>
-      <br>
-      <a href="http://www.github.com/trinityXmontoya">Github</a>
-      <br>
-      <a href="http://www.trinitymontoya.com">Personal Page</a>
+       <a href="www.trinitymontoya.com">&copy; Trinity Montoya 2014</a>
     </div>
 
 </div><!--/span-->
