--- a/app/views/users/signup.html.erb
+++ b/app/views/users/signup.html.erb
@@ -19,21 +19,18 @@
 <div id="signup-form">
     <%= form_for @user do |f|%>
   <div id="signup-step-1"xp>
-    This is the only information we require for you to signup, no passwords necessary! Read more about our <%= link_to "passwordless login process here.", faq_path %>
-
-    <div class="form-group">
-    <%= f.label :email %>
-    <%= f.text_field :email, type: 'email' %>
+    This is the only information we require for you to signup, no passwords necessary! <br> Read more about our <%= link_to "passwordless login process here.", faq_path %>
+    <br>
+    <div class="form-group input-group">
+    <%= f.text_field :email, type: 'email', class: 'form-control', placeholder: "Email" %>
     </div>
 
-    <div class="form-group">
-    <%= f.label :name %>
-    <%= f.text_field :name %>
+    <div class="form-group input-group">
+    <%= f.text_field :name, type: 'text', class: 'form-control', placeholder: "Name" %>
     </div>
 
-    <div class="form-group">
-    <%= f.label :username %>
-    <%= f.text_field :username %>
+    <div class="form-group input-group">
+    <%= f.text_field :username, type: 'text', class: 'form-control', placeholder: "Username" %>
     </div>
 
     <div id="signup-continue" class='btn'>Continue</div>
@@ -46,30 +43,27 @@
     <div class="form-group">
     <%= f.label :background_photo_url %>
     <p>If you don't choose one, this will be your default:</p>
-    <%= image_tag @user.background_photo_url, width: '200' %>
+    <%= image_tag @user.background_photo_url, width: '100', height: '100'  %>
     <%= f.text_field :background_photo_url, type: 'url' %>
     </div>
 
     <div class="form-group">
     <%= f.label :profile_photo_url %>
     <p>If you don't choose one, this will be your default:</p>
-    <%= image_tag @user.profile_photo_url, width: '200' %>
+    <%= image_tag @user.profile_photo_url, width: '100', height: '100' %>
     <%= f.text_field :profile_photo_url, type: 'url' %>
     </div>
-
-    <div class="form-group">
-    <%= f.label :bio %>
-    <%= f.text_field :bio %>
+    <br>
+    <div class="form-group input-group">
+    <%= f.text_field :bio, type: 'text', class: 'form-control', placeholder: "Bio (optional)" %>
     </div>
 
-    <div class="form-group">
-    <%= f.label :website %>
-    <%= f.text_field :website, type: 'url' %>
+    <div class="form-group input-group">
+    <%= f.text_field :website, type: 'url', class: 'form-control', placeholder: "Website (optional)" %>
     </div>
 
-    <div class="form-group">
-    <%= f.label :location %>
-    <%= f.text_field :location %>
+   <div class="form-group input-group">
+    <%= f.text_field :location, type: 'text', class: 'form-control', placeholder: "Location (optional)" %>
     </div>
 
    <!--  <div class="form-group">
@@ -78,7 +72,7 @@
     </div> -->
 
     <div id='signup-back' class="btn">Back</div>
-    <%= f.submit %>
+    <%= f.submit class: 'btn' %>
   </div><!-- end signup step 2-->
   <% end %>
 </div><!-- end signup form-->
