--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,7 @@
  */
 
 body {
-  color: red
+  color: red;
   font-family: Helvetica;
   background-image: url('http://subtlepatterns.com/patterns/green_dust_scratch.png')
 }
