--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "Kitter" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "Kitter - A twitter exclusively for cats" %></title>
     <%= csrf_meta_tags %>
+    <link rel="image_src" href="/images/kitter.png" />
+
+    <meta name="description" content="Kitter is a place for all a cat's meows.">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
