--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,26 +1,17 @@
-<h1>All Users</h1>
 
+<h1>Who To Follow</h1>
+<ul>
 <% @users.each do |user| %>
- <%= link_to user do %>
-  <div class="user_index col-md-2">
-  <img class="user_index_image" src="<%= user.profile_photo_url%>">
-  <%= user.username %>
-  </div>
+  <% unless current_user == user || current_user.followers.include?(user) %>
+  <li class="each_user_index row">
+   <%= link_to user do %>
+    <div class="user_index">
+    <img class="user_index_image" src="<%= user.profile_photo_url%>">
+    <%= user.username %>
+    <% end %>
+    <%= button_to "Follow", user_follow_path(user) , class: 'btn user_index_follow'%>
+    </div>
+  </li>
   <% end %>
-
-  <% unless current_user == user %>
-
-  <% unless current_user.followers.include?(user) %>
-  <%= form_tag user_follow_path(user) do  %>
-  <%= submit_tag "Follow" %>
-  <% end %>
-  <% end %>
-
-  <% if current_user.followers.include?(user) %>
-  <%= form_tag user_unfollow_path(user) do %>
-  <%= submit_tag "Unfollow" %>
-  <% end %>
-  <% end %>
-  <% end %>
-
-  <% end %>
+<% end %>
+</ul>
