--- a/app/views/layouts/user_static.html.erb
+++ b/app/views/layouts/user_static.html.erb
@@ -34,9 +34,7 @@
                 <p><%= link_to "@#{user.username}", user_path(user)  %></p>
                 <br>
                 <% unless current_user.followers.include?(user) %>
-                  <%= form_tag user_follow_path(user) do  %>
-                  <%= submit_tag "Follow" %>
-                  <% end %>
+                  <%= button_to "Follow", user_follow_path(user) , class: 'btn'%>
                 <% end %>
               </div><!--.follow -->
             </div><!--.who_to_follow_info -->
@@ -108,35 +106,20 @@
         </div>
         <% end%>
 
-        <% if @user == current_user%>
-          <%= link_to "Edit profile", edit_user_path(@user)%>
-        <% else %>
-
          <!--  If a user is blocked, you can only unblock them, following is obviously disabled until the user is unblocked and when you block a user they are automatically removed from your followers list -->
           <% if current_user.blocked_users.include?(@user) %>
-            <%= form_tag user_unblock_path(@user) do %>
-            <%= submit_tag "Unblock" %>
-            <% end %>
+            <%= button_to "Unblock", user_unblock_path(@user) , class: 'btn'%>
           <% else %>
-            <%= form_tag user_block_path(@user) do %>
-            <%= submit_tag "Block" %>
-            <% end %>
+            <%= button_to "Block", user_block_path(@user) , class: 'btn'%>
 
               <% if current_user.followings.include?(@user) %>
-                <%= form_tag user_unfollow_path(@user) do  %>
-                <%= submit_tag "Unfollow" %>
-                <% end %>
+                <%= button_to "Unfollow", user_unfollow_path(@user) , class: 'btn'%>
               <% else %>
-                <%= form_tag user_follow_path(@user) do %>
-                <%= submit_tag "Follow" %>
-                <% end %>
+                <%= button_to "Follow", user_follow_path(@user) , class: 'btn'%>
               <% end %>
             <% end %>
 
-        <% end %>
-
       </div>
-
 
   <div class="row-fluid">
       <%= yield %>
@@ -147,3 +130,4 @@
 <% end %> <!-- end content -->
 
 <%= render template: "layouts/application" %>
+
