--- a/app/views/users/following.html.erb
+++ b/app/views/users/following.html.erb
@@ -1,19 +1,14 @@
 <h3>Following</h3>
 
 <% @followings.each do |follow| %>
-  <img src="<%= follow.user.profile_photo_url%>" alt="" />
-  <%= link_to follow.user do %>
-  <%= follow.user.name %>
-  <%= "@#{follow.user.username}" %>
+  <img src="<%= follow.profile_photo_url%>" alt="" />
+  <%= link_to follow do %>
+  <%= follow.name %>
+  <%= "@#{follow.username}" %>
   <% end %>
-  <%= follow.user.bio %>
+  <%= follow.bio %>
 
-  <%= form_tag user_block_path(follow.user) do %>
-  <%= submit_tag "Block" %>
-  <% end %>
-
-  <%= form_tag user_unfollow_path(follow.user) do %>
-  <%= submit_tag "Unfollow" %>
-  <% end %>
+  <%= button_to "Block", user_block_path(follow) , class: 'btn'%>
+  <%= button_to "Unfollow", user_unfollow_path(follow) , class: 'btn'%>
 
 <% end %>
