--- a/app/views/main/welcome.html.erb
+++ b/app/views/main/welcome.html.erb
@@ -1,3 +1,4 @@
+<%= javascript_include_tag 'tweets/new_tweet' %>
 
 <div class="span4 left_sidebar">
 
@@ -38,9 +39,14 @@
 
       <div id="tweet_box">
         <%= form_for @path do |f| %>
-        <%= f.text_field :content, placeholder: 'limit 140 characters',maxlength: 140  %>
-        <%= f.submit "Meow!" %>
-        <% end %>
+        <%= f.hidden_field :content %>
+        <div id='tweet-content-text' contenteditable='true' role='text'></div>
+        <div id="tweet_form_options" class='hide-me'>
+          <p id="charCount">140</p>
+          <%= f.submit "Meow!", id: 'tweet-submit' %>
+          <% end %>
+        </div>
+
       </div>
 
     </div><!--/.sidebar_home -->
