--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -8,12 +8,12 @@
   <%= "@#{follower.username}" %>
   <% end %>
   <%= follower.bio %>
-  <%= button_to "Block", user_block_path(user) , class: 'btn'%>
+  <%= button_to "Block", user_block_path(follower) , class: 'btn'%>
 
   <% if current_user.followings.include?(follower) %>
-    <%= button_to "Unfollow", user_unfollow_path(user) , class: 'btn'%>
+    <%= button_to "Unfollow", user_unfollow_path(follower) , class: 'btn'%>
   <% else %>
-    <%= button_to "Follow", user_follow_path(user) , class: 'btn'%>
+    <%= button_to "Follow", user_follow_path(follower) , class: 'btn'%>
   <% end %>
 
 <% end %>
