--- a/app/views/users/notifications.html.erb
+++ b/app/views/users/notifications.html.erb
@@ -18,7 +18,9 @@
 
     <% if notification.kind == 'replied' %>
     replied
-    <%= render 'tweets/individual_tweet_template', tweet: notification.tweet %>
+      <% cache notification.tweet do %>
+        <%= render 'tweets/individual_tweet_template', tweet: notification.tweet %>
+      <% end %>
     <% end %>
 
     <% if notification.kind == 'followed' %>
@@ -27,8 +29,10 @@
       <%= link_to notification.poster.name, notification.poster %> followed you!
     <% end %>
   <% else %>
-    <% notification.includes(:replies).each do |n| %>
-    <%= render 'tweets/individual_tweet_template', tweet: n.reply_tweet %>
+    <% notification.each do |n| %>
+      <% cache n do %>
+        <%= render 'tweets/individual_tweet_template', tweet: n.reply_tweet %>
+      <% end %>
     <%end%>
   <% end %>
 <% end %>
