--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,5 +2,7 @@
 <%= @user.username %>'s Tweets
 
 <% @tweets.each do |tweet| %>
- <%= render 'tweets/individual_tweet_template', tweet: tweet %>
+  <% cache tweet do %>
+    <%= render 'tweets/individual_tweet_template', tweet: tweet %>
+  <% end %>
 <% end %>
