--- a/app/views/users/signup.html.erb
+++ b/app/views/users/signup.html.erb
@@ -1,6 +1,6 @@
 <%= javascript_include_tag 'users/signup' %>
 
-<h1>Sign Up</h1>
+<h1>Join Kitter Today</h1>
 
 <% if flash[:notice] %>
   <%= flash[:notice] %>
@@ -17,62 +17,27 @@
 </div>
 
 <div id="signup-form">
-    <%= form_for @user do |f|%>
-  <div id="signup-step-1"xp>
-    This is the only information we require for you to signup, no passwords necessary! <br> Read more about our <%= link_to "passwordless login process here.", faq_path %>
-    <br>
+  This is the only information we require for you to signup, no passwords necessary!
+  <br>
+  Read more about our <%= link_to "passwordless login process here.", faq_path %>
+  <br>
+  <br>
+  <%= form_for @user do |f|%>
     <div class="form-group input-group">
-    <%= f.text_field :email, type: 'email', class: 'form-control', placeholder: "Email" %>
-    </div>
-
-    <div class="form-group input-group">
-    <%= f.text_field :name, type: 'text', class: 'form-control', placeholder: "Name" %>
-    </div>
-
-    <div class="form-group input-group">
-    <%= f.text_field :username, type: 'text', class: 'form-control', placeholder: "Username" %>
-    </div>
-
-    <input type="button" class='btn' value="Next">
-  </div><!-- end signup step 1-->
-
-  <div id="signup-step-2" class='hide-me'>
-
-    <span id='entered-username'></span>
-
-    <div class="form-group">
-    <%= f.label :background_photo_url %>
-    <p>If you don't choose one, this will be your default:</p>
-    <%= image_tag @user.background_photo_url, width: '100', height: '100'  %>
-    <%= f.text_field :background_photo_url, type: 'url' %>
-    </div>
-
-    <div class="form-group">
-    <%= f.label :profile_photo_url %>
-    <p>If you don't choose one, this will be your default:</p>
-    <%= image_tag @user.profile_photo_url, width: '100', height: '100' %>
-    <%= f.text_field :profile_photo_url, type: 'url' %>
-    </div>
-    <br>
-    <div class="form-group input-group">
-    <%= f.text_field :bio, type: 'text', class: 'form-control', placeholder: "Bio (optional)" %>
+    <%= f.label :email, "Email address" %>
+    <%= f.text_field :email, type: 'email', class: 'form-control'%>
     </div>
 
     <div class="form-group input-group">
-    <%= f.text_field :website, type: 'url', class: 'form-control', placeholder: "Website (optional)" %>
+    <%= f.label :name, "Full name" %>
+    <%= f.text_field :name, type: 'text', class: 'form-control'%>
     </div>
 
-   <div class="form-group input-group">
-    <%= f.text_field :location, type: 'text', class: 'form-control', placeholder: "Location (optional)" %>
+    <div class="form-group input-group">
+    <%= f.label :username, "Choose your username" %>
+    <%= f.text_field :username, type: 'text', class: 'form-control'%>
     </div>
 
-   <!--  <div class="form-group">
-    <#%= f.label :country_id %>
-    <#%= f.number_field :country_id %>
-    </div> -->
-
-    <input type="button" class="btn" value="Back">
     <%= f.submit class: 'btn' %>
-  </div><!-- end signup step 2-->
   <% end %>
 </div><!-- end signup form-->
