add basic passwordless login explanation

--- a/app/views/main/faq.html.erb
+++ b/app/views/main/faq.html.erb
@@ -1,4 +1,15 @@
-Passwordless login
+<h3>Passwordless login</h3>
 
 
-Sendgrid, here is proof I own this domain!
+<p>
+Our login process at Kitter is a little different...
+<br>
+<br>
+We don't use passwords. At all. Which means you don't need to remember another one (even though we all know you use the same password for every site...).
+<br>
+When you sign up, all we require is your email, username, and a name. That's it.
+<br>
+When enter your email or username at login, a completely unique and temporary login link is generated and emailed to you.
+<br>
+Once you click it you're logged in forever! (Or until you logout.)
+</p>
